# CPM8000

./: .gitignore  .gitmodules  CMakeLists.txt  GOALS.md  LICENSE  Makefile  PROGRESS.md  README.md
bios/M20/: ar8k.z8k  asz8k.z8k  bios.c  bios.rel  bios.sub  biosasm.8kn  biosboot.8kn  biosdefs.8kn  biosif.8kn  biosio.8kn  biosmem.8kn  biostrap.8kn  copy.z8k  cpm.sys  cpmldr.rel  cpmldr.sys  cpmsys.rel  cpmsys.sub  cpmsys2.rel  ctype.h  ddt.z8k  dump.z8k  ed.z8k  format.z8k  lbiosasm.8kn  ld8k.z8k  ldrbdos.rel  makeldr.sub  mkputbt.sub  nmz8k.z8k  opt.c  opt1.c  option.h  pip.z8k  putboot.c  putboot.z8k  readme  setjmp.h  signal.h  sizez8k.z8k  (+11 more)
bios/emu/: Makefile  biosboot.s  biosdef.s  biostrap.s
bios/z8001/: Makefile  README.md  biosif.s  i8251.s  z8001mb-to-m20.patch
distribution/: cpm_link_src.img  cpm_m20_zcc.img  emptycpm.img
distribution/CPM_8000_1.1/: GAMES.IMG  MISC11.IMG  REL11A.IMG  REL11B.IMG  REL11C.IMG  TEXT11.IMG
doc/: programmers_guide.md  system_guide.md
scripts/: asz8k.sub  bios.sub  build-asz8k.sh  build-bios.sh  build-cpmldr.sh  build-cpmsys.sh  build-fpe.sh  build-ld8k.sh  cpmsys.sub  fpe.sub  ld8k.sub  link-cpmsys.sh  linkcpmsys.sub  overlay-cpm8k.sh  regenerate-cpm8k.sh  sysgen.sh
src/: diskdefs_m20.mame
src/asm8k/: asz8k.c  asz8k.h  asz8k.pd  chain.c
src/cpm8k/: asz8k.pd  bios.c  biosasm.8kn  biosboot.8kn  biosdefs.8kn  biosif.8kn  biosio.8kn  biosmem.8kn  biostrap.8kn  ctype.h  errno.h  format.z8k  lbiosasm.8kn  ld8k.z8k  ld8k2.z8k  makeldr.sub  opt.c  opt1.c  option.h  pause.z8k  portab.h  putboot.c  readme  setjmp.h  signal.h  startup.8kn  stdio.h  syscall.8kn  tictac.s  tmptic.z8k  trk.8kn  wump.c  xout.h
src/cpm8kemu/: Makefile  cpm8k_bdos.cpp  cpm8k_bdos.h  cpm8k_bios.cpp  cpm8k_bios.h  cpm8k_console.cpp  cpm8k_console.h  cpm8k_drives.cpp  cpm8k_drives.h  cpm8k_file.cpp  cpm8k_file.h  cpm8k_mem.h  main.cpp
(+22 files in other folders)
